--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Horiseon</title>
 </head>
 
-<!-- header/navigation -->
+<!-- header/nav -->
     <section class="header">
         <h1>
             <a href="/">Hori<span class="seo">seo</span>n</a>
@@ -28,7 +28,7 @@
         </nav>
 
     </section>
-<!-- header/navigation ends-->
+<!-- header/navends-->
 
 <!-- hero section -->
     <div class="hero"></div>
